--- a/RailsjQuery/app/views/layouts/application.html.erb
+++ b/RailsjQuery/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>RailsjQuery</title>
+    <title>Space Zx Simulator</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
