--- a/RailsjQuery/app/views/layouts/application.html.erb
+++ b/RailsjQuery/app/views/layouts/application.html.erb
@@ -10,6 +10,19 @@
   </head>
 
   <body>
+    <div class="nav-bar">
+          <div id="home-box"></div>
+          <div id="rocket-box"></div>
+          <div id="pilot-box"></div>
+          <div id="engineer-box"></div>
+          <div id="button-words"><a data-animation="ripple">Space <span style="font-weight: bold;">Home</span></a></div>
+          <div id="button-words"><%= link_to "Home", root_path %></div>
+          <div id="button-words"><%= link_to "Home", root_path %></div>
+          <div id="button-words"><%= link_to "Home", root_path %></div>
+          <div class="container">
+	        
+</div>
+    </div>
     <%= yield %>
   </body>
 </html>
