--- a/RailsjQuery/app/views/layouts/application.html.erb
+++ b/RailsjQuery/app/views/layouts/application.html.erb
@@ -16,11 +16,11 @@
           <div id="pilot-box"></div>
           <div id="engineer-box"></div>
           <div id="button-words"><a data-animation="ripple">Space <span style="font-weight: bold;">Home</span></a></div>
-          <div id="button-words"><%= link_to "Home", root_path %></div>
-          <div id="button-words"><%= link_to "Home", root_path %></div>
-          <div id="button-words"><%= link_to "Home", root_path %></div>
+          <div id="button-words"><a data-animation="ripple">Rockers</a></div>
+          <div id="button-words"><a data-animation="ripple">Pilots</a></div>
+          <div id="button-words"><a data-animation="ripple">Engineers</a></div>
           <div class="container">
-	        
+
 </div>
     </div>
     <%= yield %>
