--- a/RailsjQuery/app/views/layouts/application.html.erb
+++ b/RailsjQuery/app/views/layouts/application.html.erb
@@ -10,18 +10,12 @@
   </head>
 
   <body>
-    <div class="nav-bar">
-          <div id="home-box"></div>
-          <div id="rocket-box"></div>
-          <div id="pilot-box"></div>
-          <div id="engineer-box"></div>
-          <div id="button-words"><a data-animation="ripple">Space <span style="font-weight: bold;">Home</span></a></div>
-          <div id="button-words"><a data-animation="ripple">Rockers</a></div>
-          <div id="button-words"><a data-animation="ripple">Pilots</a></div>
-          <div id="button-words"><a data-animation="ripple">Engineers</a></div>
-          <div class="container">
-
-</div>
+    <div class="topnav">
+      <a class="active" href="#home">Home</a>
+      <a href="#news">Rockets</a>
+      <a href="#contact">Engineers</a>
+      <a href="#about">Pilots</a>
+      <a href="#about">Login</a>
     </div>
     <%= yield %>
   </body>
