--- a/RailsjQuery/app/views/rockets/new.html.erb
+++ b/RailsjQuery/app/views/rockets/new.html.erb
@@ -17,11 +17,6 @@
   </div>
 
   <div class="field">
-    <%= f.label :type %><br>
-    <%= f.text_field :type %>
-  </div>
-
-  <div class="field">
     <%= f.label :top_speed %><br>
     <%= f.number_field :top_speed %>
   </div>
@@ -30,10 +25,12 @@
     <%= f.number_field :capacity %>
   </div>
   <div class="field">
-    <%= f.collection_select :pilot_id, Pilot.order(:first_name), :id, :last_name, include_blank: true %><br>
+    <%= f.label :pilot %><br>
+    <%= f.collection_select :pilot_id, Pilot.order(:first_name), :id, :last_name %><br>
   </div>
   <div class="field">
-    <%= f.collection_select :engineer_id, Engineer.order(:first_name), :id, :last_name, include_blank: true %><br>
+    <%= f.label :engineer %><br>
+    <%= f.collection_select :engineer_id, Engineer.order(:first_name), :id, :last_name %><br>
   </div>
 
   <div class="actions">
