--- a/RailsjQuery/app/views/rockets/_rocket.html.erb
+++ b/RailsjQuery/app/views/rockets/_rocket.html.erb
@@ -1,5 +1,5 @@
-<li><%= rocket.name %></li>
+<li>Rocket: <%= rocket.name %></li>
 <li>Engineers: <% rocket.engineers.each do |engineer| %>
   <%= engineer.first_name %> <%= engineer.last_name %>
 <% end %></li>
-<li>Pilot: <%= rocket.pilot.first_name %> <%= rocket.pilot.last_name %></li>
+<li>Pilot: <%= rocket.pilot.first_name %> <%= rocket.pilot.last_name %></li><br>
