--- a/RailsjQuery/app/views/rockets/new.html.erb
+++ b/RailsjQuery/app/views/rockets/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@rocket) do |f| %>
+<%= form_for @rocket do |f| %>
   <% if @rocket.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@rocket.errors.count, "error") %> prohibited this Product from being saved:</h2>
@@ -29,9 +29,7 @@
     <%= f.collection_select :pilot_id, Pilot.order(:first_name), :id, :last_name %><br>
   </div>
 
-  <div class="actions">
     <%= f.submit %>
-  </div>
 <% end %>
 
 <div id="rocketResult">
@@ -52,7 +50,7 @@
           var rocket = data;
           $("#rocketName").text(rocket["name"]);
           $("#rocketSpeed").text(rocket["top_speed"]);
-          $("#rocketPilot").text(rocket["pilot"]);
+          $("#rocketPilot").text(rocket["pilot"]["last_name"]);
         });
       });
     });
