--- a/RailsjQuery/app/views/layouts/application.html.erb
+++ b/RailsjQuery/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
     <title>Space Zx Simulator</title>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag "application" %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
   </head>
